Fix text and space wrapping on <pre> tag

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,7 @@
   background-color: #FF5449;
   background: linear-gradient(40deg, #FF7349, #FF5449);
   justify-content: center;
+  flex-shrink: 0;
   text-transform: uppercase;
   border-bottom: 1px solid #222;
   border-radius: 4px 4px 0 0;
@@ -47,6 +48,8 @@ pre {
   background-color: #e8e8e8;
   border-radius: 0 0 4px 0;
   flex-grow: 1;
+  white-space: pre-wrap;
+  overflow-y: scroll;
 }
 
 pre, textarea {
